<resources>
    <string name="app_name">Lab7</string>
    <string name="ok_button">OK</string>
    <string name="clear_button">CLEAR</string>
    <string name="save_button">SAVE</string>
    <string name="load_button">LOAD</string>
    <string name="delete_button">DELETE</string>

    <string name="hint_new">New Password</string>
    <string name="hint_confirm">Confirm Password</string>
    <string name="hint_content">File Content Here</string>
    <string name="hint_name">File Name Here</string>
    <string name="title_fileEditor">File Editor</string>
</resources>
